# book_of_mormon_search

./: .env.example  .gitignore  .sesskey  DEPLOY_COMMANDS.md  RAILWAY_DEPLOYMENT.md  README.md  main.py  pyproject.toml
data/: bom_embeddings.npz  kjb_embeddings.npz
src/: __init__.py  download_data.py  embed.py  search.py
